--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,71 +1,52 @@
+include: package:flutter_lints/flutter.yaml
+
 linter:
   rules:
-    # STYLE
-    - camel_case_types
-    - camel_case_extensions
-    - library_names
-    - file_names
-    - library_prefixes
-    - non_constant_identifier_names
-    - constant_identifier_names # prefer
-    - directives_ordering
-    - lines_longer_than_80_chars # avoid
-    - curly_braces_in_flow_control_structures
-
-    # DOCUMENTATION
-    - slash_for_doc_comments
-    - package_api_docs # prefer
-    - public_member_api_docs # prefer
-    #- comment_references # Unused because https://github.com/dart-lang/sdk/issues/36974
-
-    # USAGE
-    - implementation_imports
-    - avoid_relative_lib_imports
-    - prefer_relative_imports
-    - prefer_adjacent_string_concatenation
-    - prefer_interpolation_to_compose_strings # prefer
-    - unnecessary_brace_in_string_interps # avoid
-    - prefer_collection_literals
-    - prefer_is_empty
-    - prefer_is_not_empty
-    - avoid_function_literals_in_foreach_calls # avoid
-    - prefer_iterable_whereType
-    - prefer_function_declarations_over_variables
-    - unnecessary_lambdas
-    - prefer_equal_for_default_values
+    - always_require_non_null_named_parameters
+    - annotate_overrides
+    - avoid_function_literals_in_foreach_calls
     - avoid_init_to_null
-    - unnecessary_getters_setters
-    #- unnecessary_getters # prefer # Disabled pending fix: https://github.com/dart-lang/linter/issues/23
-    #- prefer_expression_function_bodies # consider
-    - unnecessary_this
-    - prefer_initializing_formals
-    - type_init_formals
-    - empty_constructor_bodies
-    - unnecessary_new
-    - unnecessary_const
-    - avoid_catches_without_on_clauses # avoid
-    - avoid_catching_errors
-    - use_rethrow_when_possible
-
-    # DESIGN
-    - use_to_and_as_if_applicable # prefer
-    - one_member_abstracts # avoid
-    - avoid_classes_with_only_static_members # avoid
-    - prefer_mixin
-    - prefer_final_fields # prefer
-    - use_setters_to_change_properties
-    - avoid_setters_without_getters
-    - avoid_returning_null # avoid
-    - avoid_returning_this # avoid
-    - type_annotate_public_apis # prefer
-    #- prefer_typing_uninitialized_variables # consider
-    - omit_local_variable_types # avoid
-    - avoid_types_on_closure_parameters # avoid
-    - avoid_return_types_on_setters
-    - prefer_generic_function_type_aliases
-    - avoid_private_typedef_functions # prefer
-    #- use_function_type_syntax_for_parameters # consider
-    - avoid_positional_boolean_parameters # avoid
-    - hash_and_equals
-    - avoid_equals_and_hash_code_on_mutable_classes # avoid
     - avoid_null_checks_in_equality_operators
+    - avoid_renaming_method_parameters
+    - avoid_return_types_on_setters
+    - avoid_returning_null_for_void
+    - avoid_single_cascade_in_expression_statements
+    # - constant_identifier_names
+    - control_flow_in_finally
+    - empty_constructor_bodies
+    - empty_statements
+    - exhaustive_cases
+    - implementation_imports
+    - library_names
+    - library_prefixes
+    - null_closures
+    - overridden_fields
+    - package_names
+    - prefer_adjacent_string_concatenation
+    - prefer_collection_literals
+    - prefer_conditional_assignment
+    - prefer_contains
+    - prefer_equal_for_default_values
+    - prefer_final_fields
+    - prefer_for_elements_to_map_fromIterable
+    - prefer_function_declarations_over_variables
+    - prefer_if_null_operators
+    - prefer_initializing_formals
+    - prefer_inlined_adds
+    - prefer_is_not_operator
+    - prefer_null_aware_operators
+    - prefer_spread_collections
+    - prefer_void_to_null
+    - recursive_getters
+    - slash_for_doc_comments
+    - type_init_formals
+    - unnecessary_brace_in_string_interps
+    - unnecessary_const
+    - unnecessary_getters_setters
+    - unnecessary_new
+    - unnecessary_null_in_if_null_operators
+    - unnecessary_string_escapes
+    - unnecessary_string_interpolations
+    - unnecessary_this
+    - use_function_type_syntax_for_parameters
+    - use_rethrow_when_possible
