--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,16 @@ dependencies:
   intl: ^0.17.0
   linter: ^1.7.0
   provider: ^5.0.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.2.0
 
 dev_dependencies:
   flutter_lints: ^1.0.3
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  args: 2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
