--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tic_tac_advanced">
+    package="app.elevatedsoft.tic_tac_advanced">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="tic_tac_advanced"
         android:icon="@mipmap/ic_launcher">
