--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   page_transition: "^2.0.2"
   flutter_spinkit: "^4.1.2"
   introduction_screen: ^2.1.0
+  firebase_core: ^1.3.0
+  firebase_analytics: ^8.1.2
+  firebase_auth: ^2.0.0
+  cloud_firestore: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^1.0.3
@@ -42,7 +46,7 @@ dev_dependencies:
     sdk: flutter
 
 dependency_overrides:
-  args: 2.0.0
+  args: 2.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
