--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,12 @@ dependencies:
   flutter_native_splash: ^1.2.0
   google_fonts: ^2.1.0
   page_transition: "^2.0.2"
-  flutter_spinkit: "^4.1.2"
   introduction_screen: ^2.1.0
   firebase_core: ^1.3.0
   firebase_analytics: ^8.1.2
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.3
