--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   flutter_spinkit: ^5.0.0
+  flutter_speed_dial: ^4.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.3
