--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^2.3.0
   flutter_spinkit: ^5.0.0
   flutter_speed_dial: ^4.1.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_lints: ^1.0.3
