--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,6 @@ dependencies:
   intl: ^0.17.0
   linter: ^1.7.0
   provider: ^5.0.0
-  flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.2.0
   google_fonts: ^2.1.0
   page_transition: "^2.0.2"
   introduction_screen: ^2.1.0
@@ -41,11 +39,26 @@ dependencies:
   flutter_spinkit: ^5.0.0
   flutter_speed_dial: ^4.1.0
   rxdart: ^0.27.1
+  audioplayers: ^0.19.1
 
 dev_dependencies:
   flutter_lints: ^1.0.3
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.1
+  flutter_native_splash: ^1.2.1
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/images/tic-tac-advanced.png"
+
+flutter_native_splash:
+  color: "#192830"
+  image: assets/images/splash.png
+  ios: true
+  android: true
+
 
 dependency_overrides:
   args: 2.1.1
@@ -65,7 +78,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/tic-tac-advanced.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/tic-tac-advanced-white.png
+    - assets/images/tic-tac-yellow.png
+    - assets/images/tic-tac-dark.png
+    - assets/images/tic-tac-color.png
+    - assets/audio/move.wav
+    - assets/audio/win.wav
+    - assets/audio/win-long.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
