--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_speed_dial: ^4.1.0
   rxdart: ^0.27.1
   audioplayers: ^0.19.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.3
