Refactored dialog code, added version update, added how to play dialog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   rxdart: ^0.27.1
   audioplayers: ^0.19.1
   shared_preferences: ^2.0.6
+  launch_review: ^3.0.1
+  package_info_plus: ^1.0.5
 
 dev_dependencies:
   flutter_lints: ^1.0.3
@@ -79,10 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/tic-tac-advanced.png
-    - assets/images/tic-tac-advanced-white.png
-    - assets/images/tic-tac-yellow.png
     - assets/images/tic-tac-dark.png
-    - assets/images/tic-tac-color.png
     - assets/audio/move.wav
     - assets/audio/win.wav
     - assets/audio/win-long.wav
