--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tic_tac_advanced
-description: A new Flutter project.
+description: New way to play Tic Tac Toe
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,13 +15,12 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  animated_text_kit: ^4.2.1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -29,9 +28,7 @@ dependencies:
   intl: ^0.17.0
   linter: ^1.7.0
   provider: ^5.0.0
-  google_fonts: ^2.1.0
   page_transition: "^2.0.2"
-  introduction_screen: ^2.1.0
   firebase_core: ^1.3.0
   firebase_analytics: ^8.1.2
   firebase_auth: ^2.0.0
@@ -66,45 +63,20 @@ flutter_native_splash:
 dependency_overrides:
   args: 2.1.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   generate: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/tic-tac-advanced.png
     - assets/images/tic-tac-dark.png
+    - assets/images/how-to-play-1.png
+    - assets/images/how-to-play-2.png
     - assets/audio/move.wav
     - assets/audio/win.wav
     - assets/audio/win-long.wav
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
-    - family: LibreBaskerville
+    - family: Acme
       fonts:
-        - asset: assets/fonts/LibreBaskerville-Regular.ttf
-        - asset: assets/fonts/LibreBaskerville-Italic.ttf
-          style: italic
-        - asset: assets/fonts/LibreBaskerville-Bold.ttf
-          weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+        - asset: assets/fonts/Acme-Regular.ttf
