--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.6
   launch_review: ^3.0.1
   package_info_plus: ^1.0.5
+  connectivity_plus: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.3
