--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,12 @@ dependencies:
      sdk: flutter
   intl: ^0.17.0
   linter: ^1.7.0
-  provider: ^5.0.0
+  provider: ^6.0.0
   page_transition: "^2.0.2"
-  firebase_core: ^1.3.0
-  firebase_analytics: ^8.1.2
-  firebase_auth: ^2.0.0
-  cloud_firestore: ^2.3.0
+  firebase_core: ^1.5.0
+  firebase_analytics: ^8.3.0
+  firebase_auth: ^3.0.2
+  cloud_firestore: ^2.5.0
   flutter_spinkit: ^5.0.0
   flutter_speed_dial: ^4.1.0
   rxdart: ^0.27.1
@@ -61,8 +61,8 @@ flutter_native_splash:
   android: true
 
 
-dependency_overrides:
-  args: 2.1.1
+# dependency_overrides:
+#   args: 2.1.1
 
 flutter:
   uses-material-design: true
