--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   launch_review: ^3.0.1
   package_info_plus: ^1.0.5
   connectivity_plus: ^1.1.0
+  google_mobile_ads: ^0.13.3
 
 dev_dependencies:
   flutter_lints: ^1.0.3
