--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
   flutter_spinkit: ^5.0.0
   flutter_speed_dial: ^7.0.0
   rxdart: ^0.27.1
-  audioplayers: ^5.1.0
   shared_preferences: ^2.0.6
   launch_review: ^3.0.1
   package_info_plus: ^4.1.0
   connectivity_plus: ^4.0.2
   google_mobile_ads: ^3.0.0
-  test_api: 0.5.2
+  test_api: ^0.6.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.2
@@ -58,10 +58,6 @@ flutter_native_splash:
   image: assets/images/splash.png
   ios: true
   android: true
-
-dependency_overrides:
-  test_api: 0.5.2
-  matcher: 0.12.16
 
 flutter:
   uses-material-design: true
